After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705349 - bluez: avdtpsrc produces error at EOF
bluez: avdtpsrc produces error at EOF
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.1.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-02 12:22 UTC by Bernhard Miller
Modified: 2013-08-02 13:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix (1.05 KB, patch)
2013-08-02 12:23 UTC, Bernhard Miller
needs-work Details | Review
reworked fix (1.26 KB, patch)
2013-08-02 13:15 UTC, Bernhard Miller
committed Details | Review

Description Bernhard Miller 2013-08-02 12:22:35 UTC
The current implementation of the bluez avdtpsrc plugin throws an error in the create function when the underlying stream is at EOF (e.g. when disconnecting the device). 

The attached patch changes the behavior to return GST_FLOW_EOS.
Comment 1 Bernhard Miller 2013-08-02 12:23:10 UTC
Created attachment 250686 [details] [review]
fix
Comment 2 Tim-Philipp Müller 2013-08-02 13:06:12 UTC
Comment on attachment 250686 [details] [review]
fix

Thanks for the patch! Looks good in general, but please provide the patch in 'git format-patch -1' format (that command should generate a file in the local directory), and change the GST_ERROR_OBJECT about EOF into GST_INFO_OBJECT. Thanks!
Comment 3 Bernhard Miller 2013-08-02 13:15:18 UTC
Created attachment 250700 [details] [review]
reworked fix

Changed patch as requested by Tim-Philipp Müller
Comment 4 Tim-Philipp Müller 2013-08-02 13:43:02 UTC
Thanks a lot, pushed:

 commit f3d6e46454fecfb125183dabd4837e04dc2766a8
 Author: Bernhard Miller <bernhard.miller@streamunlimited.com>
 Date:   Fri Aug 2 15:12:17 2013 +0200

    bluez: return GST_FLOW_EOS in avdtpsrc create when stream is EOF
    
    Signed-off-by: Bernhard Miller <bernhard.miller@streamunlimited.com>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705349