bluez: return GST_FLOW_EOS in avdtpsrc create when stream is EOF

Signed-off-by: Bernhard Miller <bernhard.miller@streamunlimited.com>

https://bugzilla.gnome.org/show_bug.cgi?id=705349